(4.2.7p23) 2010/04/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1516] unpeer by IP address fails, DNS name works.
* [Bug 1517] ntpq and ntpdc should verify reverse DNS before use.
  ntpq and ntpdc now use the following format for showing purported
  DNS names from IP address "reverse" DNS lookups when the DNS name
  does not exist or does not include the original IP address among
  the results: "192.168.1.2 (fake.dns.local)".
(4.2.7p22) 2010/04/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1432] Don't set inheritable flag for linux capabilities.
* [Bug 1465] Make sure time from TS2100 is not invalid.
* [Bug 1483] AI_NUMERICSERV undefined in 4.2.7p20.
* [Bug 1497] fudge is broken by getnetnum() change.
* [Bug 1503] Auto-enabling of monitor for "restrict ... limited" wrong.
* [Bug 1504] ntpdate tickles ntpd "discard minimum 1" rate limit if
  "restrict ... limited" is used.
* ntpdate: stop querying source after KoD packet response, log it.
* ntpdate: rate limit each server to 2s between packets.
* From J. N. Perlinger: avoid pointer wraparound warnings in dolfptoa(),
  printf format mismatches with 64-bit size_t.
* Broadcast client (ephemeral) associations should be demobilized only
  if they are not heard from for 10 consecutive polls, regardless of
  surviving the clock selection.  Fix from David Mills.
* Add "ntpq -c ifstats" similar to "ntpdc -c ifstats".
* Add "ntpq -c sysstats" similar to "ntpdc -c sysstats".
* Add "ntpq -c monstats" to show monlist knobs and stats.
* Add "ntpq -c mrulist" similar to "ntpdc -c monlist" but not
  limited to 600 rows, and with filtering and sorting options:
  ntpq -c "mrulist mincount=2 laddr=192.168.1.2 sort=-avgint"
  ntpq -c "mrulist sort=addr"
  ntpq -c "mrulist mincount=2 sort=count"
  ntpq -c "mrulist sort=-lstint"
* Modify internal representation of MRU list to use l_fp fixed-point
  NTP timestamps instead of seconds since startup.  This increases the